--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,7 @@
   HUGO_VERSION = "0.30.2"
   HUGO_ENV = "production"
   HUGO_ENABLEGITINFO = "true"
+
+[[redirects]]
+  from = "https://*.errata.ai"
+  to = "http://127.0.0.1"
