--- a/data/sidebar.yml
+++ b/data/sidebar.yml
@@ -1,23 +1,28 @@
-- title: Getting started
+- title: Getting Started
   pages:
-    - title: Introduction
+    - title: Installation
     - title: Download
     - title: Contents
     - title: Browsers & devices
     - title: JavaScript
     - title: Theming
     - title: Build tools
-    # - title: Best practices # TODO: Write this content
     - title: Webpack
     - title: Accessibility
 
-- title: Layout
+- title: File Formats & Scoping
   pages:
     - title: Overview
     - title: Grid
     - title: Utilities for layout
 
-- title: Content
+- title: Configuration
+  pages:
+    - title: Overview
+    - title: Grid
+    - title: Utilities for layout
+
+- title: Rules & Styles
   pages:
     - title: Reboot
     - title: Typography
@@ -26,67 +31,32 @@
     - title: Tables
     - title: Figures
 
-- title: Components
-  pages:
-    - title: Alerts
-    - title: Badge
-    - title: Breadcrumb
-    - title: Buttons
-    - title: Button group
-    - title: Card
-    - title: Carousel
-    - title: Collapse
-    - title: Dropdowns
-    - title: Forms
-    - title: Input group
-    - title: Jumbotron
-    - title: List group
-    - title: Media object
-    - title: Modal
-    - title: Navs
-    - title: Navbar
-    - title: Pagination
-    - title: Popovers
-    - title: Progress
-    - title: Scrollspy
-    - title: Spinners
-    - title: Toasts
-    - title: Tooltips
-
-- title: Utilities
-  pages:
-    - title: Borders
-    - title: Clearfix
-    - title: Close icon
-    - title: Colors
-    - title: Display
-    - title: Embed
-    - title: Flex
-    - title: Float
-    - title: Image replacement
-    - title: Interactions
-    - title: Overflow
-    - title: Position
-    - title: Screen readers
-    - title: Shadows
-    - title: Sizing
-    - title: Spacing
-    - title: Stretched link
-    - title: Text
-    - title: Vertical align
-    - title: Visibility
-
-- title: Extend
-  pages:
-    - title: Approach
-    - title: Icons
-
-- title: Migration
-
-- title: About
+- title: Vocabularies
   pages:
     - title: Overview
-    - title: Team
-    - title: Brand
-    - title: License
-    - title: Translations
+    - title: Grid
+    - title: Utilities for layout
+
+- title: Packages
+  pages:
+    - title: Overview
+    - title: Grid
+    - title: Utilities for layout
+
+- title: Vale Server
+  pages:
+    - title: Overview
+    - title: Grid
+    - title: Utilities for layout
+
+- title: Plug-ins, Add-ons, and Services
+  pages:
+    - title: Overview
+    - title: Grid
+    - title: Utilities for layout
+
+- title: Cheat Sheets
+  pages:
+    - title: Overview
+    - title: Grid
+    - title: Utilities for layout
